--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+            <scope>all</scope>
+        </dependency>
+
+
+
 
     </dependencies>
 
